# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: common.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs
tests/api/: common.rs  health_check.rs  main.rs  newsletter.rs  subscriptions.rs
tests/common/: mod.rs
