[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Joseph Cheverton-Wynne <jchevertonwynne@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.0.0-beta.8"
actix-service = "2.0.0-beta.5"
actix-web = "4.0.0-beta.8"
chrono = "0.4.19"
config = "0.11.0"
rand = { version = "0.8.4", features = ["std_rng"] }
reqwest = { version = "0.11.3", features = ["json", "rustls-tls"] }
serde = "1.0.125"
serde-aux = "2.2.0"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.4.0-beta.4"
tracing-bunyan-formatter = "0.2.4"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = {version = "0.2.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.8.0"
uuid = {version = "0.8.2", features = ["v4"]}
validator = "0.14.0"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2.2.0"
claim = "0.5.0"
fake = "~2.3"
linkify = "0.7.0"#
once_cell = "1.7.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.66"
tokio = { version = "1.5.0", features = ["rt", "macros"] }
wiremock = "0.5.6"